--- a/css/styles.css
+++ b/css/styles.css
@@ -7,64 +7,88 @@
   margin: 0;
   padding:0;
 }
+
+
 body {
   font-family: helvetica, sans-serif;
+  font-size: 16px;
   margin: 0;
+}
+
+h1 {
+  font-size: 40px;
+  font-weight: 600;
+  margin: 0;
+  text-align: left;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+caption {
+  font-size: 16px;
+  text-align: left;
+  padding-bottom: 4px;
+}
+
+table {
+  width: 348px;
+  padding: 0px;
+  border-spacing: 0px;
+}
+th {
+  border-top: 10px solid black;
+  /*border-bottom: .5px solid black;*/
+  padding-top: 12px;
+  font-size: 15px;
+  font-weight:500;
+  padding-bottom: 6px;
+}
+td {
+  padding-top: 8px;
+  border-top: 1px solid black;
+  padding-bottom: 6px;
+}
+img {
+  position:absolute;
+  top:20px;
+  left: 600px;
+  width: 36%;
+}
+.container {
+  width: 370px;
+  border: 1px solid #000;
+  padding: 10px;
+  margin-left: 20px;
+  margin-top: 20px;
 }
 .left {
   text-align: left;
 }
-
 .center {
   text-align: center;
 }
-
 .right {
   text-align: right;
 }
-
-.container {
-  position: relative;
-  display: block;
-  margin: 10%
+.bold {
+  font-weight: 600;
+}
+.small {
+  font-size: 14px;
+}
+.daily {
+  padding-top: 3px;
+  border-top: 6px solid black;
 }
 
-h1 {
-  text-align: center;
-}
-table {
-  position: absolute;
-  top:4em;
-  background-color: lightgrey;
-  border: 1px solid rgba(29,150,178,1);
-  width: 100%;
-  padding: 0em;
-  border-spacing: 0em;
-}
-td, th {
- padding: 0.5rem;
- border-bottom: 1px solid rgba(0,0,0,1);
-}
-th {
-  background-color: rgba(29,150,178,1);
-  /*border: 1px solid rgba(0,0,0,1);*/
-  color: rgba(255,255,255,.9);
-
-}
-td {
-  background-color: rgba(239,239,238);
-  /*border: 1px solid rgba(29,150,178,1);*/
-  color: rgba(0,0,0,1);
-}
-.head {
-  position: absolute;
-  top:1em;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  width: 100%;
+.vitamin {
+  border-top: 10px solid black;
 }
 
-tbody tr:nth-child(odd) {
-  background-color: white;
+.none {
+  border-top: 0px;
+  padding: 0px;
+}
+.below {
+  border-bottom: 1px;
+  padding: 0px;
 }
